# mosquito-identification

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 297d0864c87e_create_observations_table.py  6d1592c07192_change_database_layout.py
ansible/: setup.yml
app/: main.py  utils.py
data/db/: app.db
src/app/: ai_classifier.py  database.py  main.py  models.py  schemas.py  tasks.py  utils.py
tests/: test_ai_classifier.py  test_observations.py
